# rotd

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/actions/action_meta/: action.yaml
.github/workflows/: model_inference_workflow.yaml  receive_video_workflow copy.yaml  repo_workflow.yaml
model_inference/: docker-compose.yaml  dockerfile  makefile  pyproject.toml  requirements.txt
model_inference/model_inference/: __main__.py  process_message.py
receive_video/: docker-compose.yaml  dockerfile  makefile  pyproject.toml  requirements.txt
receive_video/receive_video/: __main__.py
terraform/: firehose.tf  iam.tf  lambda.tf  main.tf  s3.tf  sqs.tf  tfplan.out
