[project]
name = "real-time-object-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "Peter Somers", email = "peter.w.somers@icloud.com"}
]

[tool.uv.sources]
torch = [
    {index = "torch-cu124", marker = "sys_platform != 'darwin'"},
    {index = "torch-cpu", marker = "sys_platform == 'darwin'"},
    ]
torch-vision = [
    {index = "torch-cu124", marker = "sys_platform != 'darwin'"},
    {index = "torch-cpu", marker = "sys_platform == 'darwin'"},
    ]

receive-video-stream = { workspace = true }
model-inference = { workspace = true }

[[tool.uv.index]]
name = "torch-cu124"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
package = false
required-version = ">=0.5.17"
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]
constraint-dependencies = [
]

[tool.uv.workspace]
members = [
    "receive_video",
    "model_inference"
]
