[project]
name = "receive-video-stream"
version = "0.1.0"
description = "receive video from a stream."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Peter Somers", email = "peter.w.somers@icloud.com"}
]
dependencies = [
    "opencv-python-headless",
    "boto3",
    "loguru>=0.7",
    "av"
]

[tool.uv]
package = true
dev-dependencies = [
  "opencv-stubs",
  "ruff",
  "boto3-stubs",
  "mypy-boto3-s3"
]

[tool.setuptools]
py-modules = ["receive_video"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 100
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"